tooling/nargo_cli/tests/compile_failure/trait_wrong_parameter/src/main.nr
trait FromField {
    fn default(x: Field) -> Self;
}

struct Foo {
    bar: Field,
}

impl Default for Foo {
    fn default(x: u32) -> Self {
    }
}

fn main() {
}
